Cambios al titulo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="bar">
         <img class="logo" src="img/logo.png">
-        <h1>Curso GiT</h1>
+        <h1>Curso GiT & Github</h1>
     </div>
     <div>
         Contenido del blog
